<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.barterbay</groupId>
	<artifactId>barterbay-frontend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name/>
	<description/>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	
		<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-controls</artifactId>
        	<version>21</version>
    	</dependency>

    	<dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-fxml</artifactId>
        	<version>21</version>
    	</dependency>
    </dependencies>	

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>

			<plugin>
    			<groupId>org.openjfx</groupId>
    			<artifactId>javafx-maven-plugin</artifactId>
    			<version>0.0.8</version>
    			<configuration>
        		<mainClass>com.barterbay.frontend.MainApp</mainClass>
    			</configuration>
			</plugin>
		</plugins>
	</build>

</project>
